# imctech-kanban

./: .commit_msg.txt  .env.example  .env.prod.example  .gitignore  1.4.md  2.1.md  2.2.md  2.3.md  3.1.md  3.3.md  4.1.md  4.3(RE).md  CLAUDE.md  GEMINI.md  Promt_Backend_2.md  Promt_Backend_3.md  README.md  code.html  comments_tab_prompt.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  overview_sprint3_prompt.md  package.json
backend/: Dockerfile  README.md  pyproject.toml
backend/config/: asgi.py  settings.py  urls.py
backend/docs/: api-overview.md  auth.md  boards.md  columns.md  comments.md  invites.md  members.md  mentor-requests.md  overview.md  projects-boards-api.md  projects.md  tasks.md  users.md  websockets.md
backend/pb/: admin.py  api.py  consumers.py  middleware.py  models.py  permissions.py  schemas.py  ws_auth.py
backend/pb/migrations/: 0001_initial.py  0002_board_description.py  0003_column.py  0004_invite.py  0005_column_kind_task.py  0006_remove_task_status_alter_column_kind.py  0007_taskcomment_taskcommentreadstate.py  0008_task_added_to_board_at_activitylog.py  0009_alter_activitylog_action_type_taskmentorrequest.py
backend/pb/routers/: __init__.py  boards.py  columns.py  comments.py  invites.py  members.py  mentor_requests.py  overview.py  projects.py  tasks.py
backend/pb/schemas/: __init__.py  boards.py  columns.py  comments.py  invites.py  members.py  mentor_requests.py  overview.py  projects.py  tasks.py
backend/pb/services/: activity_service.py  archive_service.py  (+11 more)
backend/users/: admin.py  api.py  models.py  schemas.py
(+86 files in other folders)
